# CPP_Tricks_Practical_Things

./: .clang-format  .editorconfig  5_default_operations.cpp  CMakeLists.txt  Herb_Sutter_CppCon2014_Note.txt  README.md  base_keyword.cpp  config.cpp  config.h  config_builder.cpp  config_builder.h  core.cpp  cpu_freq.cpp  cpuinfo.txt  crtp.cpp  enumerate.cpp  feature_list.cpp  fold.cpp  forward.cpp  lambda.cpp  literals.cpp  memory_pool.cpp  more_lambda.cpp  nicer_type_erasure.cpp  parse.cpp  policy_based_design.cpp  range.cpp  sequence.cpp  sfinae.cpp  string_match.cpp  tag_dispatch.cpp  template_on_enum.cpp  template_on_string  template_on_string.cpp  template_on_string.h  type_erasure.cpp  type_traits.cpp  variadic_templates .cpp  variadic_templates.cpp
config_builder.dSYM/Contents/: Info.plist
config_builder.dSYM/Contents/Resources/DWARF/: config_builder
