cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

project(CPP_Tricks_Practical_Things)
add_executable (crtp crtp.cpp)
add_executable (policy_based_design  policy_based_design.cpp)
add_executable (tag_dispatc  tag_dispatch.cpp)
add_executable (sfinae sfinae.cpp)
add_executable (5_default_operations 5_default_operations.cpp)
add_executable(type_erasure type_erasure.cpp)
add_executable(nicer_type_erasure nicer_type_erasure.cpp)
add_executable(type_traits type_traits.cpp)
add_executable(config_builder config_builder.cpp config.cpp)
add_executable(feature_list feature_list.cpp)
add_executable(base_keyword base_keyword.cpp)
add_executable(sequence sequence.cpp)
add_executable(variadic_templates  variadic_templates.cpp)
add_executable(literals literals.cpp)
add_executable(lambda lambda.cpp)